--- a/docs/clojure-1.adoc
+++ b/docs/clojure-1.adoc
@@ -1,28 +1,11 @@
 = Clojure course: Part 1
 include::slide.attrs[]
 
+
 [state=title]
 == Introduction and functions syntax
 
-[.centered]
---
-{bl}
-{bl}
-{bl}
-{bl}
-{bl}
-
-[.left]
-image::cycognito.jpg[height=300px]
-
-[.left.margin-right]
-{bl}
-{bl}
-icon:heart[size=lg]
-
-[.left]
-image::clojure-logo.png[height=300px]
---
+include::{includedir}/intro.adoc[]
 
 == Online tools and materials
 
