--- a/docs/sets.adoc
+++ b/docs/sets.adoc
@@ -2,37 +2,78 @@
 include::slide.attrs[]
 
 [state=title]
-== Data collections
+== Sets
 include::{includedir}/intro.adoc[]
 
+
+== Sets
+
+{meditation} When is a set a better fit than a list or a vector?
 
 
 == Sets - creation
 
-To create a set from a collection, you use set:
-
+[.fragment]
+--
+To create a set from a sequence, you use `set`:
+[source.eval-clojure, clojure]
 (set '(1 "hello" [1 2]))
-#{1 "hello" [1 2]}
+--
+
+[.fragment]
+--
 In a set, there are no duplicates
-
+[source.eval-clojure, clojure]
 (set [1 1 "hello" "hello" [1 2] '(1 2)])
-#{1 "hello" [1 2]}
-Why [1 2] and (1 2) are considered as duplicates?
 
-You can also create a set with the set literal #{}
+{meditation} Why `[1 2]` and `(1 2)` are considered as duplicates?
+--
 
-#{1 2 "hello" [1 2]}
-#{1 2 "hello" [1 2]}
+[.fragment]
+--
+You can also create a set with the set literal `#{}`
 But then, duplicates are forbidden!
-
+[source.eval-clojure, clojure]
 #{1 2 3 1}
-Syntax error reading source.
-Set literal contains duplicate key: 1
-What's the difference between set and distinct?
+--
 
-(distinct [1 1 "hello" "hello" [1 2] '(1 2)])
-(1 "hello" [1 2])
-You can also use (into #{}) to create a set
+== Sets - functions
 
-(into #{} [1 2 3 3 4])
-#{1 2 3 4}
+[.fragment]
+--
+It's efficient to check if an element belongs to a set
+[source.eval-clojure, clojure]
+(contains? #{1 2 3} 2)
+--
+
+
+[.fragment]
+--
+Checking belonging is the most natural operation on a set. Set behaves as a function
+[source.eval-clojure, clojure]
+(#{1 2 3} 2)
+--
+
+
+== Making a sequence concrete
+
+[.fragment]
+--
+`(into #{})` converts a sequence into a set
+[source.eval-clojure, clojure]
+(into #{} (range 5))
+--
+
+[.fragment]
+--
+`(into [])` converts a sequence into a vector
+[source.eval-clojure, clojure]
+(into [] (range 5))
+--
+
+[.fragment]
+--
+`(into ())` converts a sequence into a list
+[source.eval-clojure, clojure]
+(into [] (range 5))
+--
