--- a/docs/functions.adoc
+++ b/docs/functions.adoc
@@ -1,24 +1,39 @@
-= Clojure course: Functions
+= Clojure course: Introduction
 include::slide.attrs[]
 
 
 [state=title]
-== Introduction and functions syntax
+== Introduction 
 
 include::{includedir}/intro.adoc[]
 
-== Online tools and materials
+== Clojure pillars
 
-[.left.w40]
-. http://app.klipse.tech/?eval_only=1[Klipse: Clojure REPL online, window="_blank"]
-. https://clojuredocs.org/[ClojureDocs: Documentation with Examples, window="_blank"]
-. http://clojurescriptkoans.com/[ClojureScript koans, window="_blank"]
-. http://clojurians.net/[Clojurians: Slack Channel, window="_blank"]
-. https://clojureverse.org/[Clojureverse forum, window="_blank"]
+image::diagrams/clojure-pillars.png[]
 
-image::tools.jpg[]
+== Homoiconicity
 
-== Functions
+TIP: The syntax of the code is the same as the syntax of the data.
+
+[cols="2*", frame=none, grid=none]
+|===
+a|
+[source,clojure]
+(+
+   (* 3 4)
+   (* 5 6))
+
+a|
+[source,clojure]
+'(a b
+  c
+  [d.a d.b]
+  (e.a [e.b.a (e.b.b.a e.b.b.b)]
+    e.c)
+|===
+
+== Functional programming
+
 A function is an entity that receives multiple _things_ and return a _thing_.
 
 In *functional programming* the _things_ that functions receive and return are allowed to be *functions*.
@@ -47,38 +62,61 @@ We call a function like this
 (bar 1 2 3)
 --
 
-=== Functions - Practice
+== The REPL
 
-> Write a function that receives a name and returns a string with the concatanation of `"Hello"` and the name. You'll need to use the https://clojuredocs.org/clojure.core/str[str, window="_blank"] function.
+Live demo
 
+== Data oriented
+
+Instead of representing data with classes, we use maps.
+
+The maps are immutable.
+
+[.fragment]
+--
 [source.eval-clojure, clojure]
-(defn hello [name]
-;; Write your code here
-)
+(def m {"a" 1})
+--
 
-{bl}
+++++
+<br>
+++++
 
+[.fragment]
+--
 [source.eval-clojure, clojure]
-(assert (= (hello "Cycognito!") "Hello Cycognito!"))
+(assoc m "b" 2)
+--
 
-=== Functions - Practice (2)
+++++
+<br>
+++++
 
-> {challenge} Write a function called `applicator` that receives two arguments: a function `f` and a "thing" named `x` and returns the application of the function `f` on `x`
 
+[.fragment]
+--
 [source.eval-clojure, clojure]
-(defn applicator [func number])
+m
+--
+== Online tools and materials
 
-{bl}
-[source.eval-clojure, clojure]
-(assert (= (applicator inc 19) 20))
+[.left.w40]
+.Reference book: https://www.braveclojure.com/clojure-for-the-brave-and-true/[Clojure for the Brave an True]
+. http://app.klipse.tech/?eval_only=1[Klipse]: Clojure REPL online
+. https://clojuredocs.org/[ClojureDocs:] Documentation with Examples
+. http://clojurescriptkoans.com/[ClojureScript koans]
+. http://clojurians.net/[Clojurians]: Slack Channel
+. https://clojureverse.org/[Clojureverse forum]
+. https://cursive-ide.com/[Cursive]: Clojure IDE based on IntelliJ
+
+image::tools.jpg[]
+
 
 
 == Homeworks
 
 [.left.w60]
 . Register to http://clojurians.net/[Clojurians: Slack Channel, window="_blank"]
+. Post at least 1 question on Clojurians
 . 10 minutes of http://clojurescriptkoans.com/[ClojureScript koans, window="_blank"] every day
-. (Re)do all the exercises
 
-[.left.w30]
-image::homeworks.png[]
